--- a/app/blogengine/blog/templates/blog/index.html
+++ b/app/blogengine/blog/templates/blog/index.html
@@ -6,23 +6,8 @@
 	{% block content %}
 		<h1>Hello, World!</h1>
 		<h2>Glad to see you, {{name}}!</h2>
-		
+
 		{% for post in posts %}
-		
-			<div class="card">
-				<div class="card-header">
-					{{ post.date_pub }}
-				</div>
-				<div class="card-body">
-					<h5 class="card-title">{{ post.title }}</h5>
-					<p class="card-text">
-						{{ post.body|truncatewords:15 }}
-					</p>
-					<a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read more</a>
-				</div>
-			</div>
+			{% include 'blog/includes/card_template.html' %}
 		{% endfor %}
 	{% endblock %}
-
-
-
