--- a/app/blogengine/templates/base.html
+++ b/app/blogengine/templates/base.html
@@ -35,9 +35,15 @@
 		</div>
 	</nav>
 
-	{% block content %}
-		There is no any content!
-	{% endblock %}
+	<div class="container mt-5">
+		<div class="row">
+			<div class="col-6 offset-md-2">
+				{% block content %}
+				There is no any content!
+				{% endblock %}
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
