--- a/app/blogengine/blog/templates/blog/index.html
+++ b/app/blogengine/blog/templates/blog/index.html
@@ -1,13 +1,21 @@
 {% extends 'blog/base_blog.html'%}
+
 	{% block title %}
-		Posts
+
+		Posts - {{ block.super}}
+
 	{% endblock %}
 
 	{% block content %}
-		<h1>Hello, World!</h1>
-		<h2>Glad to see you, {{name}}!</h2>
 
-		{% for post in posts %}
+		<h1>Hello, this is Alex blog!</h1>
+
+		{% if name %}
+		<h2>Glad to see you, {{name}}!</h2>
+		{% endif %}
+
+		{% for post in page_object.object_list %}
 			{% include 'blog/includes/card_template.html' %}
 		{% endfor %}
+
 	{% endblock %}
