--- a/app/blogengine/templates/base.html
+++ b/app/blogengine/templates/base.html
@@ -1,11 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="{% static 'css/styles.css'%}">
 	<title>
 		{% block title %}
-			Blog Engine
+			Alex Blog
 		{% endblock %}
 	</title>
 </head>
@@ -28,8 +33,8 @@
 					<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 				</li>
 			</ul>
-			<form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search">
+			<form class="form-inline my-2 my-lg-0" action="{% url 'posts_list_url' %}">
+				<input class="form-control mr-sm-2" type="search" placeholder="Search" name="search">
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 			</form>
 		</div>
@@ -41,9 +46,51 @@
 				{% block content %}
 				There is no any content!
 				{% endblock %}
+
+				{% if is_paginated %}
+
+					<nav aria-label="Page navigation">
+					  <ul class="pagination">
+					    <li class="page-item {% if not prev_url %} disabled {% endif %}">
+					      <a class="page-link" href="{{ prev_url }}" aria-label="Previous">
+					        <span aria-hidden="true">&laquo;</span>
+					      </a>
+					    </li>
+
+							{% for n in page_object.paginator.page_range %}
+								{% if page_object.number == n %}
+									<li class="page-item active">
+										<a class="page-link" href="?page={{ n }}">{{ n }}</a>
+									</li>
+								{% elif n > page_object.number|add:-3 and n < page_object.number|add:3 %}
+									<li class="page-item">
+										<a class="page-link" href="?page={{ n }}">{{ n }}</a>
+									</li>
+								{% endif %}
+							{% endfor %}
+
+							<li class="page-item {% if not next_url %} disabled {% endif %}">
+					      <a class="page-link" href="{{ next_url }}" aria-label="Next">
+					        <span aria-hidden="true">&raquo;</span>
+					      </a>
+					    </li>
+					  </ul>
+					</nav>
+				{% endif %}
+
+
 			</div>
 		</div>
 	</div>
 
+
+		{% if request.user.is_authenticated and request.user.is_staff %}
+
+				<div class="admin-panel align-items-center">
+					<a href="/admin" class="btn btn-outline-info">Admin</a>
+						{% block admin-panel %}{% endblock %}
+				</div>
+
+			{% endif %}
 </body>
 </html>
